--- a/styles/_typography.scss
+++ b/styles/_typography.scss
@@ -14,3 +14,20 @@ html {
 body {
   font-family: 'Inter', sans-serif;
 }
+
+@font-face {
+  font-family: 'Criteria';
+  src: url('/fonts/CriteriaCFBold.woff'), url('/fonts/CriteriaCFBold.ttf'),
+    url('/fonts/CriteriaCFBold.otf');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Criteria Demi';
+  src: url('/fonts/CriteriaCFDemibold.woff'), url('/fonts/CriteriaCFDemibold.ttf'),
+    url('/fonts/CriteriaCFDemibold.otf');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
